Made some changes. Can navigate now

--- a/.bash_history/app/src/main/res/values/strings.xml
+++ b/.bash_history/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Poolit</string>
+    <string name="title_activity_cart_menu">CartMenu</string>
+    <string name="title_activity_cart_field">CartField</string>
 </resources>
