created action bar xml file. And just added fragments, created main activity.Need to update it

--- a/.bash_history/app/src/main/res/values/strings.xml
+++ b/.bash_history/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Poolit</string>
     <string name="title_activity_cart_menu">CartMenu</string>
     <string name="title_activity_cart_field">CartField</string>
+    <string name="action_messages">Messages</string>
+    <string name="social_notifications">Notifications</string>
+    <string name="action_drawmenu">Menu</string>
 </resources>
